--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
 			<!--logo-->
 			<div class="left floated column">
 				<h2 style="color:#2185d0;">
-					<i class="ui large blue cloud icon"></i> <a href="//bhadoo.uk">Bhadoo Cloud</a>
+					<a class="navbar-brand" href="https://www.hashhackers.com/"><img src="logo.png" alt="Hash Hackers" width="200px" height="auto"></a>
 				</h2>
 			</div>
 			<!--controls-->
@@ -154,7 +154,7 @@
 		
 		<div class="row">
 			<div class="column">
-				<p>© 2018 Bhadoo Industries</p>
+				<p><strong>© 2018 PBG WorldWide Media | All Rights Reserved.</strong></p>
 			</div>
 		</div>
 
