--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Bhadoo Cloud</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" type="text/css" href="libs/semantic/dist/semantic.min.css">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="icon" href="cloud-favicon.png" type="image/x-icon" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/libs/semantic/dist/semantic.min.css" integrity="sha256-hq8jzEEtzNDAbLdCrrDfrRUCgL9NY73htrqqpZ6PzEc=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/css/index.css" integrity="sha256-iZRUokDd4hKazBECAwFZuMW1ry2bLh0gIeK4DLy7TjU=" crossorigin="anonymous">
+	<link rel="icon" href="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/cloud-favicon.png" type="image/x-icon" />
 </head>
 
 <body ng-controller="main" class="cage">
@@ -15,7 +15,7 @@
 			<!--logo-->
 			<div class="left floated column">
 				<h2 style="color:#2185d0;">
-					<a class="navbar-brand" href="https://www.hashhackers.com/"><img src="logo.png" alt="Hash Hackers" width="200px" height="auto"></a>
+					<a class="navbar-brand" href="https://www.hashhackers.com/"><img src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/logo.png" alt="Hash Hackers" width="200px" height="auto"></a>
 				</h2>
 			</div>
 			<!--controls-->
@@ -154,24 +154,23 @@
 		
 		<div class="row">
 			<div class="column">
-				<p><strong>© 2018 PBG WorldWide Media | All Rights Reserved.</strong></p>
+				<p><strong>© 2019 PBG WorldWide Media | All Rights Reserved.</strong></p>
 			</div>
 		</div>
 
 	</div>
 
-	<script src="libs/jquery/jquery.min.js"></script>
-	<script src="libs/semantic/dist/semantic.min.js"></script>
-	<script src="libs/angular/angular.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/libs/jquery/jquery.min.js" integrity="sha256-OWRoY6QU4KhJILOoY5wPPoyUU16NwFG0K0haBo3CkC8=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/libs/semantic/dist/semantic.min.js" integrity="sha256-clAOqigQj3g3VDZE2D8NjaTUkojDoDEeod4dp2TLed8=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/libs/angular/angular.min.js" integrity="sha256-6Yu7R8io0sEFNtrtytY3qQsLnaweva/4m25Zq5z1XU8=" crossorigin="anonymous"></script>
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="js/index.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/js/index.js" integrity="sha256-vwGGKFFheIK5ojFwP1G6IogPum4fooeYSQhe3XuyeDU=" crossorigin="anonymous"></script>
 	<!--download item-->
-	<script src="parts/downloadItem/downloadItem.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/parts/downloadItem/downloadItem.js" integrity="sha256-hdXbDlPxDOsduUq1CiFZgbRRvdo07xxDO5L1kPyjnhA=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="parts/downloadItem/downloadItem.css">
 	<!--directory-->
-	<script src="parts/directory/directory.js"></script>
-	<link rel="stylesheet" type="text/css" href="parts/directory/directory.css">
+	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/parts/directory/directory.js" integrity="sha256-HbfZMOopKd0ib/ia9NKkHPfSb3I6BlB9vsIjFojTWbk=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/parts/directory/directory.css" integrity="sha256-wsMZhM0fzFaPgq9IxX+//DCjgyxYgo7+7x5TNO8u87M=" crossorigin="anonymous">
 
-</body>
-
+	</body>
 </html>
