--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
 			<!--logo-->
 			<div class="left floated column">
 				<h2 style="color:#2185d0;">
-					<a class="navbar-brand" href="https://www.hashhackers.com/"><img src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/logo.png" alt="Hash Hackers" width="200px" height="auto"></a>
+					<a class="navbar-brand" href="https://github.com/ParveenBhadooOfficial/BhadooCloud"><img src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/logo.png" alt="Hash Hackers" width="200px" height="auto"></a>
 				</h2>
 			</div>
 			<!--controls-->
@@ -154,7 +154,7 @@
 		
 		<div class="row">
 			<div class="column">
-				<p><strong>© 2019 PBG WorldWide Media | All Rights Reserved.</strong></p>
+				<p><strong>© 2019 Bhadoo Cloud & Respected Owners | All Rights Reserved.</strong></p>
 			</div>
 		</div>
 
