--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="app">
+
 <head>
 	<title>Bhadoo Cloud</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -157,9 +158,7 @@
 				<p><strong>© 2019 Bhadoo Cloud & Respected Owners | All Rights Reserved.</strong></p>
 			</div>
 		</div>
-
 	</div>
-
 	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/libs/jquery/jquery.min.js" integrity="sha256-OWRoY6QU4KhJILOoY5wPPoyUU16NwFG0K0haBo3CkC8=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/libs/semantic/dist/semantic.min.js" integrity="sha256-clAOqigQj3g3VDZE2D8NjaTUkojDoDEeod4dp2TLed8=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/libs/angular/angular.min.js" integrity="sha256-6Yu7R8io0sEFNtrtytY3qQsLnaweva/4m25Zq5z1XU8=" crossorigin="anonymous"></script>
@@ -167,10 +166,9 @@
 	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/js/index.js" integrity="sha256-vwGGKFFheIK5ojFwP1G6IogPum4fooeYSQhe3XuyeDU=" crossorigin="anonymous"></script>
 	<!--download item-->
 	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/parts/downloadItem/downloadItem.js" integrity="sha256-hdXbDlPxDOsduUq1CiFZgbRRvdo07xxDO5L1kPyjnhA=" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="parts/downloadItem/downloadItem.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/parts/downloadItem/downloadItem.css" integrity="sha256-al5CtqqJdrrRyk1++BuAmngPVDpD2RxQPshRGODCGyA=" crossorigin="anonymous">
 	<!--directory-->
 	<script src="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/parts/directory/directory.js" integrity="sha256-HbfZMOopKd0ib/ia9NKkHPfSb3I6BlB9vsIjFojTWbk=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ParveenBhadooOfficial/BhadooCloud@1.0/static/parts/directory/directory.css" integrity="sha256-wsMZhM0fzFaPgq9IxX+//DCjgyxYgo7+7x5TNO8u87M=" crossorigin="anonymous">
-
 	</body>
 </html>
